# infographie

./: .gitignore  CMakeLists.txt  README.md
UI_luncher_infographie_projects/: CMakeLists.txt  flowlayout.cpp  flowlayout.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
code_graphics/: CMakeLists.txt  cube.cpp  flags.txt  projection_sur_diagonale.cpp  rotated_cube.cpp
code_graphics/includs/: graphics_utils.h  math_trix.cpp
code_graphics/src_graphics/: align_with_Z.cpp  chapes.h  mains.cpp  projection_sur_diagonale.cpp
code_graphics/src_graphics/aa__hello/: hello_graphics.cpp
code_graphics/src_graphics/ajuster/: ajuster.cpp
code_graphics/src_graphics/aligner/: align_with_Z.cpp  aligner.cpp
code_graphics/src_graphics/alin/: align_with_Z.cpp  main.cpp
code_graphics/src_graphics/bresenhame/: bresenham_cercle.cpp  bresenham_line.cpp
code_graphics/src_graphics/control/: conrol_.cpp  control.cpp  courbe.cpp  projection_sur_diagonale.cpp
code_graphics/src_graphics/correc_exam/: corr_ex1_courb.cpp  corr_ex2_flr.cpp  corr_ex3_.cpp  corr_ex3_my_approch.cpp  corr_ex3_prof_approch.cpp
code_graphics/src_graphics/courbs/: biezier.cpp
code_graphics/src_graphics/cube/: rotated_cube.cpp
code_graphics/src_graphics/fleure/: fleure.cpp  flower_stem.cpp
code_graphics/src_graphics/horloge/: horloge.cpp
code_graphics/src_graphics/ideas/: aligner.cpp  aligner_avec_z.cpp  aliiign.cpp  ideas.cpp  object.cpp  perspective_diagonale_test3.cpp  polyedere.cpp  projection_cub_pers_on_diagonal_plan.cpp  test3.cpp  test4.cpp  zoomable_grid.cpp
code_graphics/src_graphics/mouse_click/: drow_mouse.cpp  mouse_click.cpp  rectangle_by_mouse.cpp  rectangle_teta_by_mouse.cpp  shapes_by_mouse_click.cpp
code_graphics/src_graphics/pendule/: pendule.cpp  pondule_rotate.cpp
code_graphics/src_graphics/perspective/: perspective.cpp  perspective_américain.cpp
code_graphics/src_graphics/points_de_fuite/: les_3_pts_de_fuite.cpp
code_graphics/src_graphics/polygone/: Polygon.h  polycone_main.cpp
code_graphics/src_graphics/polynimiale/: ellipse_polynomial.cpp
code_graphics/src_graphics/trigonometrique/: elipse_teta.cpp
docs/assets/: README.md
